# vagas-medicas-crawler

./: .gitignore  CLAUDE.md  README.md  mapeamento-vagas-medicos.md  matriz-comparativa.md  pyproject.toml  tabela-resumida.md
docs/: roadmap.md
docs/plans/: 2026-01-31-crawler-poc.md  2026-01-31-html-storage.md  2026-01-31-indeed-mosaic-parser.md  2026-02-01-enrichment-quality.md  2026-02-01-freshness-postgres.md  2026-02-01-infojobs-spider.md  2026-02-02-medical-scoring-design.md  2026-02-02-medical-scoring.md  2026-02-03-frontend-mvp-impl.md  2026-02-03-frontend-mvp.md  2026-02-05-bne-jsonld-parser.md  2026-02-06-proxy-fallback.md  2026-02-07-frontend-warm-redesign.md  2026-02-07-pci-concursos-spider.md  2026-02-07-pci-freshness-design.md  2026-02-07-retry-failed-details.md  2026-02-07-source-strategy.md  2026-02-08-drizzle-migration.md  2026-02-19-seo-geo-design.md  2026-02-19-seo-geo-implementation.md
scripts/: dump_bne_api.py  test_proxy_rotation.py
src/vagas/: base_spider.py  browser.py  cli.py  db.py  enrich.py  filters.py  location.py  models.py  normalize.py  scoring.py  storage.py  utils.py
tests/: test_browser_proxy.py  test_db.py  test_enrich.py  test_filters.py  test_location.py  test_models.py  test_normalize.py  test_proxy.py  test_scoring.py  test_scoring_integration.py  test_storage.py
tests/fixtures/: bne_detail.html  bne_response.json  indeed_page.html  infojobs_detail.html  vagamedica_page.html  vagas_com_page.html
tests/test_spiders/: test_bne.py  test_gupy.py  test_indeed.py  test_infojobs.py  test_pci.py  test_trabalha_brasil.py  (+2 more)
(+8 files in other folders)
